<resources>
    <!-- App related. -->
    <string name="app_name">Planeat</string>

    <!-- Toolbar. -->
    <string name="toolbar_shopping_list_title">Shopping list</string>
    <string name="toolbar_planning_title">Planning</string>
    <string name="toolbar_meals_of_the_day_title">Meals</string>
    <string name="toolbar_menu_add_title">Add</string>
    <string name="toolbar_menu_list_title">List</string>
    <string name="toolbar_search_title">Search for you meal</string>
    <string name="toolbar_response_title">Choose your meal</string>
    <string name="toolbar_recipe_title">Recipe</string>

    <!-- FoodMenu drawer. -->
    <string name="menu_drawer_profile_title">Profile</string>
    <string name="menu_drawer_recipes_title">Recipes</string>
    <string name="menu_drawer_historic_title">Historic</string>
    <string name="menu_drawer_parameters_title">Parameters</string>
    <string name="menu_drawer_help_title">Help</string>

    <string name="menu_drawer_item_food_title">Search</string>
    <string name="menu_drawer_item_tools_title">Tools</string>
    <string name="menu_drawer_item_others_title">Others</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Bottom navigation view. -->
    <string name="bottom_navigation_menu_shopping_list">Shopping List</string>
    <string name="bottom_navigation_menu_planning">Planning</string>
    <string name="bottom_navigation_menu_meal_of_the_day">Meals</string>

    <!-- Search filter and label. -->
    <string name="edit_text_hint">Key word</string>
    <string name="diet_label">DIET</string>
    <string name="diet_filter_balanced">Balanced</string>
    <string name="diet_filter_high_protein">Hight protein</string>
    <string name="diet_filter_low_fat">Low fat</string>
    <string name="diet_filter_low_carbs">Low carb</string>

    <string name="health_label">HEALTH</string>
    <string name="health_filter_vegan">Vegan</string>
    <string name="health_filter_vegetarian">Vegetarian</string>
    <string name="health_filter_sugar_conscious">Sugar conscious</string>
    <string name="health_filter_peanut_free">Peanut free</string>
    <string name="health_filter_tree_nut_free">Tree-nut free</string>
    <string name="health_filter_alcohol_free">Alcohol free</string>

    <string name="submit_search_text">Search</string>

    <!-- Errors. -->
    <string name="error_text_empty">Key word empty, you need to enter a query.</string>
    <string name="error_text_too_short">Key word is too short (less than 3 characters).</string>
    <string name="error_research_no_result">Sorry ! There is no result for your search.</string>
    <string name="error_day_timing_empty">You must choose a day timing for your meal.</string>
    <string name="error_eating_date_empty">You must choose a date for you meal.</string>
    <string name="error_reading_shopping_list">A reading error occur</string>
    <string name="error_writing_shopping_list">A writing error occur</string>
    <string name="error_not_available_yet">Available soon !</string>
    <string name="error_no_internet">No internet available !</string>

    <!-- Warning. -->
    <string name="delete_meal_dialog_title">Careful</string>
    <string name="delete_meal_dialog_text">Are you sure to want to delete this meal ?</string>
    <string name="overwrite_dialog_title">Warning</string>
    <string name="overwrite_dialog_text">You already have a meal programmed for this specific day timing at this date. Would you overwrite it ?</string>

    <!-- Done. -->
    <string name="saved_list_in_storage">Your shopping list has been saved</string>

    <!-- Model bottom sheet. -->
    <string name="day_timing">Day timing of your meal :</string>
    <string name="eating_date">Date of your meal : </string>
    <string name="day_timing_breakfast">Breakfast</string>
    <string name="day_timing_after_morning">After morning</string>
    <string name="day_timing_lunch">Lunch</string>
    <string name="day_timing_afternoon">Afternoon</string>
    <string name="day_timing_dinner">Dinner</string>
    <string name="save_meal_button">Save this meal</string>


</resources>
